--- a/keeweb/config.json
+++ b/keeweb/config.json
@@ -1,5 +1,8 @@
 {
   "settings": {
-    "theme": "te"
+    "theme": "white",
+    "gdriveClientId": "dunno",
+    "webdav" : false,
+    "onedrive": false
   }
 }
