--- a/keeweb/config.json
+++ b/keeweb/config.json
@@ -1,6 +1,6 @@
 {
   "settings": {
-    "theme": "white",
+    "theme": "wh",
     "gdriveClientId": "dunno",
     "webdav" : false,
     "onedrive": false
