--- a/keeweb/config.json
+++ b/keeweb/config.json
@@ -1,7 +1,7 @@
 {
   "settings": {
     "theme": "wh",
-    "gdriveClientId": "dunno",
+    "gdriveClientId": "8461275550-launlfjcn906oag4phgm2dr4p210v78a.apps.googleusercontent.com",
     "webdav" : false,
     "onedrive": false
   }
